--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "portfolio",
-  "name": "godmod portfolio",
+  "short_name": "godmod",
+  "name": "godmod",
   "icons": [
     {
       "src": "null.ico",
